Fixed tab overlap

--- a/FFDR_Ontology_Implementation_Project/Firefighters_data_Integration_Platform/static/Firefighters_data_Integration_Platform/styles.css
+++ b/FFDR_Ontology_Implementation_Project/Firefighters_data_Integration_Platform/static/Firefighters_data_Integration_Platform/styles.css
@@ -676,7 +676,7 @@ margin-bottom: 5px;
 }
  #sub-main-view{    
   margin-top: 5px;
-    height: calc(100% - 80px);
+    height: calc(100% - 130px);
   }
   
 #contact-address #sub-sub-main-view{
@@ -708,7 +708,7 @@ margin-bottom: 5px;
 }
 
 #left-main-right-container ul{
-    height: 40px;
+    min-height: 40px;
     align-content: space-around;
 }
 
